--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pl">
   <head>
     <meta charset="UTF-8" />
-    <meta name="author" content="Artur Bomtempo" />
+    <meta name="author" content="Michał Wygonik" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wesołych Świąt!</title>
